@@ -1,3 +1,6 @@
+7 March 2008
++ Added way to update slots
+
 3 March 2008
 + Added user permissions to signup
 + Removed some unneeded, commented code
